--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
 
     <string name="del">Delete</string>
     <string name="edit">Edit</string>
+    <string name="save">Save</string>
 
     <string name="close">Close</string>
     <string name="add_book">Add Book</string>
