--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,14 @@
     <string name="del">Delete</string>
     <string name="edit">Edit</string>
     <string name="save">Save</string>
+    <string name="update">Update</string>
 
     <string name="close">Close</string>
     <string name="add_book">Add Book</string>
     <string name="titl">Title</string>
+    <string name="book_det">Book Detail</string>
+
+    <string name="info">Your Info</string>
+
+    <string name="stats">Your Stats</string>
 </resources>
