--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="info">Your Info</string>
 
     <string name="stats">Your Stats</string>
+    <string name="expand_icon">Expand Icon</string>
 </resources>
