--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
 
     <string name="stats">Your Stats</string>
     <string name="expand_icon">Expand Icon</string>
+
+    <string name="valid_chp">Total chapters should be more than current chapter</string>
+    <string name="title_err">The title should have more than 5 characters</string>
+    <string name="auth_err">The auth should have more than 5 characters</string>
 </resources>
