--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">M-Library</string>
     <string name="deadline">Deadline Checked</string>
     <string name="deadLn">Deadline</string>
-    <string name="title">Book Title: %s</string>
-    <string name="reading_status">Reading Status: %s</string>
+    <string name="title">Book Title: %1$s</string>
+    <string name="reading_status">Reading Status: %1$s</string>
     <string name="due_date">Due Date: %s</string>
     <string name="rem">Remaining</string>
-   
+
     <string name="go_back">Go Back</string>
     <string name="author">Book Author</string>
     <string name="reading_st">Reading Status</string>
