--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="titl">Title</string>
     <string name="book_det">Book Detail</string>
 
-    <string name="info">Your Info</string>
+    <string name="info">Book Info</string>
     <string name="empty">No Books</string>
 
     <string name="stats">Your Stats</string>
